# kakebo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: testing.yml
src/: errors.rs  expense_editing.rs  expense_editor.rs  format.rs  main.rs  parse.rs
src/expenses/: advancement.rs  debt.rs  group_expense.rs  mod.rs  recurring_expense.rs  single_expense.rs
src/tui/: actions.rs  editor.rs  mod.rs  table.rs
