[package]
name = "kakebo"
version = "0.1.0"
edition = "2021"

[dependencies]
age = { version = "0.10.0" }
clap = { version = "4.5.0", features = ["derive"] }
edit = "0.1.5"
nom = "7.1.3"
rpassword = "7.3.1"
serde = { version = "1.0.203", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.56"
toml = "0.8.10"
